# kairuai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demo.py  install.sh  kairu.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish-npm.yml  publish-pypi.yml
agents/: prediction_agent.py  signal_agent.py  utils.py
agents/polymarket/: package.json
agents/polymarket/src/: index.ts
agents/trading/: package.json
agents/trading/src/: index.ts
sdk/: package.json
sdk/src/: index.ts
tests/: test_prediction_agent.py  test_signal_agent.py  test_utils.py
